[PLAT-2779][PLAT-2780] - fix : gflag ui clean up and enhancemnts
Summary:
**[PLAT-2779]** - UI clean up tasks

1. Adjust Modal width and height as per figma screens.
2. Adjusted all margins and paddings.
3. Aligned Flag name as per figma screens.
4. Adjusted all the colors and background colors.
5. Change title and subit label of the modal while editing.
6. Other minor ui updates.

**[PLAT-2780]** - Add gflag modal was breaking when the flag name is too big
Fix : Set inline size and applied word break fro overflow text

Test Plan:
**Test Plan**
- Tested Manually

**Screenshots**

{F22050}

{F22051}

{F22052}

Reviewers: ssutar, kkannan, mjoshi, cpadinjareveettil, asathyan

Reviewed By: cpadinjareveettil, asathyan

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D14921

--- a/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
+++ b/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
@@ -409,7 +409,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 10px !important;
+  padding: 16px !important;
 }
 
 .add-border-left {
@@ -426,10 +426,21 @@
   }
 }
 
+.g-flag-list .list-group {
+  margin-top: 8px;
+  .list-group-item {
+    border: 0px !important;
+    border-width: 0px !important;
+    font-family: 'Menlo';
+  }
+}
+
 .g-flag-list-item {
   text-overflow: ellipsis;
   overflow-x: hidden;
   cursor: pointer;
+  border-radius: 6px;
+  font-weight: 400;
   &:hover {
     color: $YB_ORANGE_HOVER !important;
     background-color: $YB_BACKGROUND;
@@ -441,7 +452,7 @@
   overflow-x: hidden;
   cursor: pointer;
   color: #333333;
-  font-weight: bold;
+  font-weight: 700;
   background-color: $YB_BACKGROUND;
   &:hover {
     color: $YB_ORANGE_HOVER !important;
@@ -470,13 +481,16 @@
   font-weight: 400;
   font-size: 11.5px;
   color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .gflag-detail-container {
   flex-shrink: 1;
   display: flex;
   flex-direction: column;
-  padding: 9px 12px 9px 12px;
+  padding: 16px;
   border: 1px solid #e3e3e5;
   border-radius: 4px;
   background: $YB_BACKGROUND;
@@ -487,6 +501,7 @@
   font-size: 13px;
   display: block;
   color: #333333;
+  margin-bottom: 3px;
 }
 
 .gflag-description-value {
@@ -494,7 +509,9 @@
   font-size: 13px;
   display: block;
   color: #818182;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
+  inline-size: 100%;
+  word-break: break-all;
 }
 
 .gflag-detail-value {
@@ -502,14 +519,16 @@
   flex-shrink: 1;
   flex-direction: row;
   border-top: 1px solid #e3e3e5;
-  padding: 20px 0px;
+  padding: 16px 0px 0px;
 }
 
 .gflag-form {
   flex-shrink: 1;
   display: flex;
   flex-direction: column;
-  padding: 20px 0px;
+  padding: 32px 0px;
+  background-color: #fcfcfc;
+  border-bottom: 1px solid #e3e3e5;
 }
 
 .row-flex {
@@ -564,6 +583,8 @@
 
 .table-val-column:hover > .flag-icon-button > .add-label {
   display: inline;
+  font-size: 11.5px;
+  font-family: 400;
 }
 
 .center-aligned {
@@ -583,6 +604,7 @@
   font-weight: 600;
   font-size: 13px;
   display: block;
+  margin-bottom: 16px;
 }
 
 .gflag-doc-link {
@@ -642,8 +664,18 @@
   padding: 6px !important;
 }
 
+.gflag-edit-table .react-bs-table .react-bs-container-header,
+.gflag-read-table .react-bs-table .react-bs-container-header {
+  border-bottom: 1px solid #eeeeee;
+}
+
+.gflag-edit-table .react-bs-table .table-bordered > thead > tr:first-child > th,
+.gflag-read-table .react-bs-table .table-bordered > thead > tr:first-child > th {
+  padding-left: 16px !important;
+}
+
 .gflag-read-table .react-bs-table table td {
-  padding: 12px 6px !important;
+  padding: 14px 14px !important;
 }
 
 .cell-font {
@@ -651,6 +683,11 @@
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
+}
+
+.header-title {
+  font-weight: 600;
+  font-size: 11.5px;
 }
 
 .high-index {
@@ -695,4 +732,41 @@
 
 .mb-2 {
   margin-bottom: 2px;
+}
+
+.gflag-modal {
+  height: 780px;
+  width: 1100px;
+}
+
+.button-container {
+  margin-top: -2px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #e3e3e5;
+}
+
+.gflag-modal-body,
+.gflag-modal-header {
+  padding: 16px;
+}
+
+.mt-16 {
+  margin-top: 16px;
+}
+
+.pl-16 {
+  margin-left: 16px;
+}
+
+.display-inline-flex {
+  display: inline-flex;
+}
+
+.gflag-button {
+  display: inline-block;
+  padding: 5px 10px;
+  margin-bottom: 0;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
 }
